--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -1042,8 +1042,11 @@ a.lCommon:hover{ color:#000; text-decoration:none;}
 .featuredBrands li{ vertical-align:middle; display:table-cell; *display:inline; *margin-right:14px;}
 /*LandingBanner*/
 .LandingBanner{ border-top:10px solid #4f3059; border-bottom:10px solid #4f3059; background:url(images/mens_wear_shirt.jpg) #ffffff no-repeat left top; position:relative; height:623px; }
+.LandingBannerWomen{background:url(images/woman.jpg) #ffffff no-repeat right bottom;}
 .LandingBanner .Model{background:url(images/mens_wear.jpg) no-repeat right top; position:absolute; right:0; top:0; bottom:0; height:100%; width:50%; z-index:1;}
+.LandingBannerWomen .Model{background:url(images/womens_wear.jpg) no-repeat left top; position:absolute; left:0; top:0; bottom:0; height:100%; width:50%; z-index:1;}
 .LandingBanner .BannerMatter{ width:485px; margin-left:53%; color:#22222; position:absolute; top:0; left:0; bottom:0; height:100%; z-index:2; text-align:left}
+.LandingBannerWomen .BannerMatter{margin-left:21%; top:220px;}
 .BannerMatter .promotionText{width:285px; position:absolute; bottom:36px; right:0;}
 .promotionText{ text-align:center; }
 .promotionText h3{font-size:14px; color:#4f3059; margin:15px 0; font-weight:bold; font-family:gotham_light, segoeui;}
@@ -1105,7 +1108,27 @@ a.joinLink:hover{ text-decoration:none;}
 .popups .field:first-child{ margin-right:5px!important;}
 .popups form .rooja_signup_email_create input[type="text"]{ width:465px;}
 .formattedSelect{ height:24px; width:235px; margin-bottom:10px; background-color:#e9e9e9; box-shadow:none; padding:5px 0px; position:relative;}
-.formattedSelect select, .formattedSelect select:focus, .formattedSelect select:hover{ border:none; outline:none; background-color:transparent; *border:1px solid #e9e9e9; width:237px; margin-left:-1px; *margin-left:1px; *width:235px; padding:0 10px;}
+.formattedSelect select, .formattedSelect select:focus, .formattedSelect select:hover{ display:none}
+.formattedSelect input[type="text"]{ border:none!important; outline:none!important; background-color:transparent!important; margin-left:-1px!important; *margin-left:1px!important; padding:0 10px!important; box-shadow:none!important;}
+.formattedSelect ul{height:0; position:absolute; top:35px; border:1px solid #97C4C6; left:-1px; right:0; width:100%; opacity:0; filter:alpha(opacity=0); -moz-transition: all .2s ease; -o-transition: all .2s ease; -webkit-transition: all .2s ease; -ms-transition: all .2s ease; overflow:hidden}
+.formattedSelect:hover ul{height:auto; opacity:1; filter:alpha(opacity=100);}
+.formattedSelect ul li{ cursor:pointer; border-top:1px solid #97C4C6; height:20px; padding:6px 10px; margin:0; background-color:#e9e9e9; font-family:'Constantia'; font-size:11pt; font-style:italic; color:#a29f9f!important;}
+.formattedSelect ul li:first-child{border-top:none;}
+.formattedSelect ul li:hover{background-color:#cbcbcb; color:#666666; }
 .formattedSelect .selectArrow{ position:absolute; top:0; right:0; *right:-1px; *border-right:1px solid #97C4C6; pointer-events:none; height:34px; width:31px; background-position:-171px -68px; z-index:9999;}
 .popups form #rooja_signup_left_joinnow_create input[type="submit"]{ margin:14px 0 4px!important; cursor:pointer;}
 #rooja_signup_left_joinnow_create input[type="submit"]:hover{ background-color:#ad5600;}
+
+/*Similar to All*/
+/*Sprite*/
+.mainSprite{}
+.inlinePopClose{}
+/*HomePage*/
+.container.nw{ padding:0!important;}
+.inlinepop{}
+.offerWht{}
+.offerOrng{}
+.offerWht h2{}
+.offerOrng h2{}
+.btnPurp{}
+.sep{}
