--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -1111,7 +1111,7 @@ a.joinLink:hover{ text-decoration:none;}
 .formattedSelect select, .formattedSelect select:focus, .formattedSelect select:hover{ display:none}
 .formattedSelect input[type="text"]{ border:none!important; outline:none!important; background-color:transparent!important; margin-left:-1px!important; *margin-left:1px!important; padding:0 10px!important; box-shadow:none!important;}
 .formattedSelect ul{height:0; position:absolute; top:35px; border:1px solid #97C4C6; left:-1px; right:0; width:100%; opacity:0; filter:alpha(opacity=0); -moz-transition: all .2s ease; -o-transition: all .2s ease; -webkit-transition: all .2s ease; -ms-transition: all .2s ease; overflow:hidden}
-.formattedSelect:hover ul{height:auto; opacity:1; filter:alpha(opacity=100);}
+.selectedList{height:auto; opacity:1; filter:alpha(opacity=100);}
 .formattedSelect ul li{ cursor:pointer; border-top:1px solid #97C4C6; height:20px; padding:6px 10px; margin:0; background-color:#e9e9e9; font-family:'Constantia'; font-size:11pt; font-style:italic; color:#a29f9f!important;}
 .formattedSelect ul li:first-child{border-top:none;}
 .formattedSelect ul li:hover{background-color:#cbcbcb; color:#666666; }
