on focus dropdown not displayed problem resolved

--- a/app/design/frontend/default/rooja/template/page/landing_page.phtml
+++ b/app/design/frontend/default/rooja/template/page/landing_page.phtml
@@ -211,7 +211,7 @@
 													<option value="1">Male</option>
 													<option value="2">Female</option>
 												</select>
-													<input type="text" title="Select your gender"  onfocus="thide(this);showHideDropDown()" onblur="tshow(this)" class="input-text required-entry" value="Select your gender" id="gender_div">
+													<input type="text" title="Select your gender"  onfocus="thide(this);showHideDropDown();" onclick="showHideDropDown()" onblur="tshow(this)" class="input-text required-entry" value="Select your gender" id="gender_div">
 													<ul class="SelectList">
 														<li id="1">Male</li>
 														<li id="2">Female</li>
