--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -1088,8 +1088,8 @@ a.lCommon{ color:#000; text-decoration:underline; font-family:arial, verdana;}
     display:none;
     padding:20px;
 }
-.popups h2{ font-size:22.87px; margin-top:10px; margin-bottom:35px; text-align: center}
-.popups .rooja_signup_right_fb_create{margin-left: auto; margin-right: auto;}
+.popups h2{ font-size:22.87px; margin-top:10px; margin-bottom:20px; text-align: center}
+.popups .rooja_signup_right_fb_create{margin-left: auto; margin-right: auto; height:41px}
 #registerForm{
 	width:495px;
 	margin-left:-247px;
@@ -1100,7 +1100,7 @@ a.lCommon{ color:#000; text-decoration:underline; font-family:arial, verdana;}
 .popups .popClose:hover{background-position:-191px -48px;}
 .nw .rooja_signup_right_fb_create a{ background-position:0 -488px; width:265px; height:41px;}
 .nw .rooja_signup_right_fb_create a:hover{ background-position:0 -529px;}
-.bdrOption{ border-bottom:2px dotted #54365e; padding-bottom:26px; margin-bottom: 26px; position:relative;}
+.bdrOption{ border-bottom:2px dotted #54365e; padding-bottom:20px; margin-bottom: 20px; position:relative;}
 .bdrOption .or{ font-family:arial; font-weight:bold; font-size:12px; position: absolute; bottom:-8px; background:#fff; width:33px; text-transform: uppercase; left:0; right:0; margin:0 auto; text-align: center; *margin-left:46%;}
 .popups form label{ font-family:gotham_bookregular; font-size:12px; display:inline; text-transform:uppercase;}
 .popups form input[type="text"], .popups form input[type="password"], .formattedSelect{ height:20px; padding:6px 10px; border:1px solid #97c4c6; box-shadow:inset 0px 0px 3px rgba(0,0,0,.28); background-color:#fff; font-family:'Constantia'; font-size:11pt; font-style:italic; color:#a29f9f!important;}
@@ -1111,13 +1111,13 @@ a.lCommon{ color:#000; text-decoration:underline; font-family:arial, verdana;}
 .formattedSelect{ height:24px; width:235px; margin-bottom:10px; background-color:#e9e9e9 !important; box-shadow:none; padding:5px 0px; position:relative;}
 .formattedSelect select, .formattedSelect select:focus, .formattedSelect select:hover{ display:none}
 .formattedSelect input[type="text"]{ border:none!important; outline:none!important; background-color:transparent!important; margin-left:-1px!important; *margin-left:1px!important; padding:0 10px!important; box-shadow:none!important;}
-.formattedSelect ul{height:0; position:absolute; top:35px; border:1px solid #97C4C6; left:-1px; right:0; width:100%; opacity:0; filter:alpha(opacity=0); -moz-transition: all .2s ease; -o-transition: all .2s ease; -webkit-transition: all .2s ease; -ms-transition: all .2s ease; overflow:hidden}
+.formattedSelect ul{height:400px; position:absolute; top:35px; border:1px solid #97C4C6; left:-1px; right:0; width:100%; opacity:0; filter:alpha(opacity=0); -moz-transition: all .2s ease; -o-transition: all .2s ease; -ms-transition: all .2s ease; overflow:hidden}
 .selectedList{height:auto !important; opacity:1 !important; filter:alpha(opacity=100);}
 .formattedSelect ul li{ cursor:pointer; border-top:1px solid #97C4C6; height:20px; padding:6px 10px; margin:0; background-color:#e9e9e9; font-family:'Constantia'; font-size:11pt; font-style:italic; color:#a29f9f!important;}
 .formattedSelect ul li:first-child{border-top:none;}
 .formattedSelect ul li:hover{background-color:#cbcbcb; color:#666666; }
 .formattedSelect .selectArrow{ position:absolute; top:0; right:0; *right:-1px; *border-right:1px solid #97C4C6; pointer-events:none; height:34px; width:31px; background-position:-171px -68px; z-index:9999;}
-.popups form #rooja_signup_left_joinnow_create input[type="submit"]{ cursor: pointer;font-family: open_sans_light !important;font-size: 24px;height: auto;line-height: 70px;margin: 14px 0 4px !important;padding: 9px 45px !important;width: auto;}
+.popups form #rooja_signup_left_joinnow_create input[type="submit"]{ cursor: pointer;font-family: open_sans_light !important;font-size: 24px;height: auto;line-height:1;margin: 14px 0 4px !important;padding: 9px 45px !important;width: auto;}
 .popups form #rooja_signup_left_joinnow_create{text-align:center}
 #rooja_signup_left_joinnow_create input[type="submit"]:hover{ background-color:#ad5600;}
 
