landing page bug resolved

--- a/app/design/frontend/default/rooja/template/page/landing_page.phtml
+++ b/app/design/frontend/default/rooja/template/page/landing_page.phtml
@@ -216,7 +216,7 @@
 													<option value="1">Male</option>
 													<option value="2">Female</option>
 												</select>
-													<input type="text" title="Select your gender"  onfocus="thide(this);showDropDown();" onclick="showDropDown()" onblur="tshow(this);hideDropDown()" class="input-text required-entry" readonly="readonly" value="Select your gender" id="gender_div">
+													<input type="text" title="Select your gender"  onfocus="showDropDown();" onclick="showDropDown()" onblur="tshow(this);hideDropDown()" class="input-text required-entry" readonly="readonly" value="Select your gender" id="gender_div">
 													<div style="display: none;" id="advice-gender_div" class="validation-advice"></div>
 													<ul class="SelectList" style="z-index:9999">
 														<li id="1">Male</li>
