--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -520,6 +520,39 @@ function formatCurrency(num) {
 -->
 
 <?php } ?>
+<!--/////22-8-2013 SOC by GC-->
+<script type="text/javascript">
+
+    var product = {
+        identifier: '<?php echo $pid ?>',
+        fn: '<?php echo $pname ?>',
+        category : [ '<?php echo $prentcat ?>', '<?php echo $pcat ?>' ],
+	<?php if($flag==1){?>
+	valid: '1346745515',
+	<?php } ?>
+	description: '<?php echo $pdesc ?>',
+        brand: '<?php echo $pbrand ?>',
+        price: '<?php echo $spclprice ?>',  // this would be the discount price
+        amount: '<?php echo $price ?>',  // this would be the original price
+        currency: 'INR',
+        url: '<?php echo $purl ?>',
+        photo: '<?php echo $imgurl ?>'
+    };
+
+</script>
+
+<script type="text/javascript">
+    (function(){
+        var s   = document.createElement('script');
+        var x   = document.getElementsByTagName('script')[0];
+        s.type  = 'text/javascript';
+        s.async = true;
+        s.src   = ('https:'==document.location.protocol?'https://':'http://')
+                + 'ap-sonar.sociomantic.com/js/2010-07-01/adpan/rooja-in';
+        x.parentNode.insertBefore( s, x );
+    })();
+</script>
+<!--/////22-8-2013 EOC by GC-->
 <script type="text/javascript">
 (function ($) {
 	
