--- a/app/design/frontend/default/rooja/template/page/landing_page.phtml
+++ b/app/design/frontend/default/rooja/template/page/landing_page.phtml
@@ -33,6 +33,56 @@
 <html xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://opengraphprotocol.org/schema/" xmlns="http://www.w3.org/1999/xhtml"  xml:lang="<?php echo $this->getLang() ?>" lang="<?php echo $this->getLang() ?>" dir="ltr">
 	<head>
 		<?php echo $this->getChildHtml('head') ?>
+<style type="text/css">
+                                            
+.popups {
+	z-index:9999;
+	position:fixed;
+	top:50%; 
+	left:50%;
+	background-color:#fff;
+    box-shadow: 0 0 5px rgba(0,0,0,.75);
+    display:none;
+    padding:20px;
+}
+.popups h2{ font-size:22.87px; margin-top:10px; margin-bottom:20px; text-align: center}
+.popups .rooja_signup_right_fb_create{margin-left: auto; margin-right: auto; height:41px}
+#registerForm{
+	width:495px;
+	margin-left:-247px;
+	margin-top:-275px;
+}
+.popups h2{ text-align: center; font-family:gotham_extra_light;}
+.popups .popClose{ cursor: pointer; background-color:#4f3059; background-position:-171px -48px; width:20px; height:20px; position: absolute; right:3px; top:3px; z-index:9999; text-indent:-1000px; overflow:hidden; }
+.popups .popClose:hover{background-position:-191px -48px;}
+.nw .rooja_signup_right_fb_create a{ background-position:0 -488px; width:265px; height:41px;}
+.nw .rooja_signup_right_fb_create a:hover{ background-position:0 -529px;}
+.bdrOption{ border-bottom:2px dotted #54365e; padding-bottom:20px; margin-bottom: 20px; position:relative;}
+.bdrOption .or{ font-family:arial; font-weight:bold; font-size:12px; position: absolute; bottom:-8px; background:#fff; width:33px; text-transform: uppercase; left:0; right:0; margin:0 auto; text-align: center; *margin-left:46%;}
+.popups form label{ font-family:gotham_bookregular; font-size:12px; display:inline; text-transform:uppercase;}
+.popups form input[type="text"], .popups form input[type="password"], .formattedSelect{ height:20px; padding:6px 10px; border:1px solid #97c4c6; box-shadow:inset 0px 0px 3px rgba(0,0,0,.28); background-color:#fff; font-family:'Constantia'; font-size:11pt; font-style:italic; color:#a29f9f!important;}
+.popups form .rooja_signup_text_create input[type="text"], .popups form input[type="password"]{ width:215px;}
+.popups form .form-list .field{ width:245px;}
+.popups .field:first-child{ margin-right:5px!important;}
+.popups form .rooja_signup_email_create input[type="text"]{ width:465px;}
+.formattedSelect{ height:24px; width:235px; margin-bottom:10px; background-color:#e9e9e9 !important; box-shadow:none; padding:5px 0px; position:relative;}
+.formattedSelect select, .formattedSelect select:focus, .formattedSelect select:hover{ display:none}
+.formattedSelect input[type="text"]{ border:none!important; outline:none!important; background-color:transparent!important; margin-left:-1px!important; *margin-left:1px!important; padding:0 10px!important; box-shadow:none!important;}
+.formattedSelect ul{height:400px; position:absolute; top:35px; border:1px solid #97C4C6; left:-1px; right:0; width:100%; opacity:0; filter:alpha(opacity=0); -moz-transition: all .2s ease; -o-transition: all .2s ease; -ms-transition: all .2s ease; overflow:hidden}
+.selectedList{height:auto !important; opacity:1 !important; filter:alpha(opacity=100);}
+.formattedSelect ul li{ cursor:pointer; border-top:1px solid #97C4C6; height:20px; padding:6px 10px; margin:0; background-color:#e9e9e9; font-family:'Constantia'; font-size:11pt; font-style:italic; color:#a29f9f!important;}
+.formattedSelect ul li:first-child{border-top:none;}
+.formattedSelect ul li:hover{background-color:#cbcbcb; color:#666666; }
+.formattedSelect .selectArrow{ position:absolute; top:0; right:0; *right:-1px; *border-right:1px solid #97C4C6; pointer-events:none; height:34px; width:31px; background-position:-171px -68px; z-index:9999;}
+.popups form #rooja_signup_left_joinnow_create input[type="submit"]{ cursor: pointer;font-family: open_sans_light !important;font-size: 24px;height: auto;line-height:1;margin: 14px 0 4px !important;padding: 9px 45px !important;width: auto;}
+.popups form #rooja_signup_left_joinnow_create{text-align:center}
+#rooja_signup_left_joinnow_create input[type="submit"]:hover{ background-color:#ad5600;}
+.selectedList {
+    height: auto !important;
+    opacity: 1 !important;
+}
+.popups select {display: block !important; width: 236px; padding: 8px;}
+</style>
 	</head>
 	<body<?php echo $this->getBodyClass()?' class="'.$this->
 		getBodyClass().'"':'' ?>>
@@ -211,18 +261,18 @@
 									<div class="field gender">
 										<label for="gender_div" class="required">Gender</label>
 										<div class="input-box">
-											<div class="formattedSelect">
-												<select name="gender" id="gender" title="Select your gender" value="Select your gender" style="display:none">
+											<div>
+												<select id="selectGender"  name="gender" id="gender" title="Select your gender" value="Select your gender">
 													<option value="1">Male</option>
 													<option value="2">Female</option>
 												</select>
-													<input type="text" title="Select your gender"  onfocus="showDropDown();" onclick="showDropDown()" onblur="tshow(this);hideDropDown()" class="input-text required-entry" readonly="readonly" value="Select your gender" id="gender_div">
+													<!-- <input type="text" title="Select your gender"  onfocus="showDropDown();" onclick="showDropDown()" onblur="tshow(this);hideDropDown()" class="input-text required-entry" readonly="readonly" value="Select your gender" id="gender_div" style="cursor:pointer;">
 													<div style="display: none;" id="advice-gender_div" class="validation-advice"></div>
 													<ul class="SelectList" style="z-index:9999">
 														<li id="1">Male</li>
 														<li id="2">Female</li>
 													</ul>
-												<div class="sprite selectArrow"></div>
+												<div class="sprite selectArrow"></div> -->
 											</div>
 										</div>
 									</div>
@@ -254,9 +304,13 @@ jQuery('.bgDull, .popups').css('display', 'none');
 });
  
 });
+/*
+ jQuery( "#selectGender" ).change(function() {
+  jQuery('#rooja_signup_left_joinnow_create input').focus();
+});*/
 
 jQuery('.SelectList li').click(function(){
-	jQuery('#gender_div').focus();
+	jQuery('#rooja_signup_left_joinnow_create input').focus();
 	val=jQuery(this).html();
 	jQuery('#gender_div').val(val);
 	id=jQuery(this).attr('id');
@@ -301,6 +355,8 @@ var gender=jQuery('#gender_div').val();
 var email=jQuery('#email_address').val();
 var password=jQuery('#password').val();
 var confirm=jQuery('#confirmation').val();
+var mobile = jQuery('#mobile').val();
+if(mobile=="Mobile") {jQuery('#mobile').val("");}
 var reg = /^\w+([-+.']\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$/;
 var failed=0;
 jQuery('#advice-confirmation').hide();
