--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
@@ -34,7 +34,7 @@
 
             <div class="input-box">
                 <label for="message">Message</label><br />
-                <textarea name="message" id="message" class="required-entry textarea" style="width:100%;" rows="7" cols="80" title="<?php echo $this->__('Short Message') ?>" >Join me at rooja.com! Rooja brings you carefully selected fashion products from internationally renowned designers and brands at discounts upto 60%. Best of all: Membership is free. ;)</textarea>
+                <textarea name="message" id="message" class="required-entry textarea" style="width:100%; height:auto !important" rows="7" cols="80" title="<?php echo $this->__('Short Message') ?>" >Join me at rooja.com! Rooja brings you carefully selected fashion products from internationally renowned designers and brands at discounts upto 60%. Best of all: Membership is free. ;)</textarea>
             </div>
 
             <div class="button-set" style="margin-top:0px">
