slider product repeatation

--- a/app/design/frontend/default/rooja/template/homepage/products.phtml
+++ b/app/design/frontend/default/rooja/template/homepage/products.phtml
@@ -21,6 +21,7 @@
 	  jQuery('.bxslider').bxSlider({
   minSlides: 5,
   maxSlides: 5,
+  infiniteLoop:false,
   slideWidth: 173,
   slideMargin:15});
   }
@@ -29,6 +30,7 @@
 	  jQuery('.bxslider').bxSlider({
   		minSlides: 3,
   		maxSlides: 3,
+	infiniteLoop:false,
   slideWidth: 166.667,
   slideMargin:15});
   }
@@ -37,6 +39,7 @@
 	  jQuery('.bxslider').bxSlider({
   		minSlides: 1,
   		maxSlides: 1,
+	 infiniteLoop:false,
   slideWidth: 180,
   slideMargin:15});
   }
