--- a/app/design/frontend/default/rooja/template/page/3columns.phtml
+++ b/app/design/frontend/default/rooja/template/page/3columns.phtml
@@ -53,7 +53,7 @@
 <?php echo $this->getChildHtml('after_body_start') ?>
 <!-- <div class="wrapper"> -->
     <?php echo $this->getChildHtml('global_notices') ?>
-        <?php echo $this->getChildHtml('header') ?>
+        <?php echo $this->getChildHtml('header',false) ?>
         <div class="container col3-layout">
             <div class="main">
                 <?php echo $this->getChildHtml('breadcrumbs') ?>
