--- a/app/design/frontend/default/rooja/template/page/1column.phtml
+++ b/app/design/frontend/default/rooja/template/page/1column.phtml
@@ -51,7 +51,7 @@
 <?php echo $this->getChildHtml('after_body_start') ?>
 <!--<div class="wrapper">-->
     <?php echo $this->getChildHtml('global_notices') ?>
-        <?php echo $this->getChildHtml('header') ?>
+        <?php echo $this->getChildHtml('header',false) ?>
         <div class="container col1-layout">
             <div class="main">
                 <div class="col-main">
