--- a/app/design/frontend/default/rooja/template/page/2columns-left-2.phtml
+++ b/app/design/frontend/default/rooja/template/page/2columns-left-2.phtml
@@ -49,7 +49,7 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn() || ($agent !="facebooke
 <?php echo $this->getChildHtml('after_body_start') ?>
 <div class="wrapper">
     <?php echo $this->getChildHtml('global_notices') ?>
-        <?php echo $this->getChildHtml('header') ?>
+        <?php echo $this->getChildHtml('header',false) ?>
         <div class="main-container col2-left-layout">
             <div class="main">
                 <div class="col-main">
